updated analyze flight data notebook. to start with setting a datafolder path

--- a/LogAnalysis/analyze_flight_data/Analyze Flight Data.ipynb
+++ b/LogAnalysis/analyze_flight_data/Analyze Flight Data.ipynb
@@ -2,23 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0 Okt9_long_oval_tt_80perc_jitter_rejectioncsv\n",
-      "1 Okt9_NN_LONG_OVAL.csv\n",
-      "2 Okt9_long_oval_tt_110perc_jitter_rejection.csv\n",
-      "3 Okt9_long_oval_tt_80perc_jitter_rejection.csv\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'flight_data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# look through flight_data folder for files containing \"aug\" (lowercase or uppercase)\u001b[39;00m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# and print out the file names with numbers\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m files \u001b[38;5;241m=\u001b[39m [f \u001b[38;5;28;01mfor\u001b[39;00m f \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mflight_data\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mokt10\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m f\u001b[38;5;241m.\u001b[39mlower() \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msepaa\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m f\u001b[38;5;241m.\u001b[39mlower()]\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, f \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(files):\n\u001b[1;32m      8\u001b[0m     \u001b[38;5;28mprint\u001b[39m(i, f)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'flight_data'"
      ]
     }
    ],
    "source": [
     "from analyze import *\n",
     "import os\n",
+    "\n",
+    "# mount flight data folder as you like\n",
+    "\n",
     "\n",
     "# look through flight_data folder for files containing \"aug\" (lowercase or uppercase)\n",
     "# and print out the file names with numbers\n",
@@ -29,16 +33,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading flight_data/Okt10_NN_long_oval_2.csv\n",
-      "Logging frequency: 808.4233029186809\n",
-      "WARNING: overwriting states with ekf states\n"
+      "Loading flight_data/Okt10_NN_long_oval_2.csv\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'flight_data/Okt10_NN_long_oval_2.csv'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mflight_data/Okt10_NN_long_oval_2.csv\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 2\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[43mload_flight_data\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m data \u001b[38;5;241m=\u001b[39m trim_nn_active(data)\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# trim data from t=3 to t=5\u001b[39;00m\n",
+      "File \u001b[0;32m~/Git/indiflightSupport/LogAnalysis/analyze_flight_data/analyze.py:99\u001b[0m, in \u001b[0;36mload_flight_data\u001b[0;34m(file_name, new_format)\u001b[0m\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_flight_data\u001b[39m(file_name, new_format\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m):\n\u001b[1;32m     98\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mLoading\u001b[39m\u001b[38;5;124m'\u001b[39m, file_name)\n\u001b[0;32m---> 99\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mfile_name\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[1;32m    100\u001b[0m         reader \u001b[38;5;241m=\u001b[39m csv\u001b[38;5;241m.\u001b[39mreader(file)\n\u001b[1;32m    101\u001b[0m         data \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(reader)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'flight_data/Okt10_NN_long_oval_2.csv'"
      ]
     }
    ],
